adding html content including about me and so on

--- a/index.html
+++ b/index.html
@@ -54,19 +54,20 @@
 	<div class="row">
 		<div class="col-xs-12 text-center">
 			<h1 class="light">About Moga</h1>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="lead">Moga aims to capture those essential elements that made this art appealing to men in ancient India.  But, yoga has also continued to develop over the millennia.  which Moga encompasses through a blend of new approaches, techniques and methods.  everyone has an individual spark, a personality, that can flourish through yoga over time.  Tulaa and Moga have collaborated to create sessions that enhance strength, power, balance and flexibility through regular practice</p>
 		</div>
 		<div class="col-md-4"> 
 			<h3 class="light">Fitness</h3>
-			<p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+			<p class="lead">Yoga is now common in mainstream <a href="http://www.mensfitness.com/life/sports/yoga-for-athletes">sports</a>.  The meaning of fitness is expanded in yoga to integrate mind and body through the action of breath and conscious movement.  Fitness is also developed in a non-competitive atmosphere, which allows increased focus on self, leading to higher levels of overall fitness.  An improved fitness gained in yoga can then be applied productively in competitive sports.</p>
 		</div>
 		<div class="col-md-4">
 			<h3 class="light">Energy</h3>
-			<p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+			<p class="lead">Yoga is restorative to the mind and to the body (http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3193654/).  The therapeutic effects of yoga can be felt as renewed energy.  The practice acts as a slow and progressive cure from physical and emotional ailments that when unchecked drain us of our vitality.  Yoga also develops our energy through focused practice.</p>
 		</div>
 		<div class="col-md-4">
 			<h3 class="light">Performance</h3>
-			<p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+			<p class="lead">Our success depends on our performance in all spheres of life.  Yoga develops a state of calm abiding that can be described as a confident state of being "in the zone"; aware yet calm, ready yet contained.  Performance benefits of yoga are well documented (http://www.ijpp.com/IJPP%20archives/2001_45_3/351-354.pdf).  Increased energy and fitness only partly describe the performance benefits from yoga in all aspects of life, social, home, work and sports.  
+</p>
 		</div>
 	</div>
 	<!--Hours-->
@@ -79,7 +80,7 @@
 		</div>
 		<div class="col-md-4">
 			<h3 class='light'>Location</h3>
-			<p class='lead'>Tulia studio</p>
+			<p class='lead'>Tulaa Yoga Studio<br>3100 Naamans Rd Wilmington DE 19810<br>Phone: 302.478.YOGA (9642) <br>Email us: info@tulaayoga.com</p>
 		</div>
 	</div>
 </section>
