--- a/index.html
+++ b/index.html
@@ -22,15 +22,25 @@
 		<!---navigation-->
 	<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
 		<div class="container">
+			
 			<div class="navbar-header">
+				<button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 				<a class="navbar-brand" href="#"><span class="light">MOGA</span></a>
+			
 			</div>
 			<div class="navbar-right">
+				
+				<div class="collapse navbar-collapse">	
 				<ul class="navbar-nav navbar">
 					<li  class="light"><a href="#">About</a></li>
 					<li class="light" ><a href="#">Hours</a></li>
 					<li class="light" ><a href="#">contact</a></li>
 					</ul>
+				</div>
 			</div>
 		</div>
 	</nav>
@@ -52,37 +62,42 @@
 <!--about-->
 <section class="container about-section">
 	<div class="row">
-		<div class="col-xs-12 text-center">
-			<h1 class="light">About Moga</h1>
-			<p class="lead">Moga aims to capture those essential elements that made this art appealing to men in ancient India.  But, yoga has also continued to develop over the millennia.  which Moga encompasses through a blend of new approaches, techniques and methods.  everyone has an individual spark, a personality, that can flourish through yoga over time.  Tulaa and Moga have collaborated to create sessions that enhance strength, power, balance and flexibility through regular practice</p>
+		
+		<div class="col-sm-4 col-sm-offset-1 col-md-offset-2">
+			<div class="row">
+				<div class="col-sm-6">
+					<h3 class="light">Hours</h3>
+					<p class="lead">Moga Will be taking place weekly on sunday afternoons. Please be on time. or whatever, just drop by!</p>
+				</div>
+				<div class="col-sm-6">
+					<h3 class='light'>Location</h3>
+					<p class='lead'>Tulaa Yoga Studio<br>3100 Naamans Rd Wilmington DE 19810<br><span class="orange">Phone:</span> 302.478.YOGA (9642) <br>Email us: <a href="info@tulaayoga.com" class="orange">info@tulaayoga.com</a></p>
+				</div>
+			</div>
+			<h3 class="light">Fitness</h3>
+			<blockquote id="fitness"> Fitness is developed in a non-competitive atmosphere, which allows increased focus on self, leading to higher levels of overall fitness. </blockquote>
+			<h3 class="light">Energy</h3>
+			<blockquote id="energy">Practice acts as a slow and progressive cure from physical and emotional ailments that when unchecked drain us of our vitality.</blockquote> 
+			<h3 class="light">Preformance</h3>
+			<blockquote id='preformance'>Yoga develops a state of calm that can be described as a confident state of being "in the zone"; aware yet calm, poised yet contained.</blockquote>
 		</div>
 		<div class="col-md-4"> 
-			<h3 class="light">Fitness</h3>
-			<p class="lead">Yoga is now common in mainstream <a href="http://www.mensfitness.com/life/sports/yoga-for-athletes">sports</a>.  The meaning of fitness is expanded in yoga to integrate mind and body through the action of breath and conscious movement.  Fitness is also developed in a non-competitive atmosphere, which allows increased focus on self, leading to higher levels of overall fitness.  An improved fitness gained in yoga can then be applied productively in competitive sports.</p>
+			<h1 class="light">About Moga</h1>
+			<p class="lead">Moga aims to capture those essential elements that made this art appealing to men in ancient India.  But, yoga has also continued to develop over the millennia.  which Moga encompasses through a blend of new approaches, techniques and methods.  everyone has an individual spark, a personality, that can flourish through yoga over time.  Tulaa and Moga have collaborated to create sessions that enhance strength, power, balance and flexibility through regular practice</p>
+			
+			<p class="lead">Yoga is now common in mainstream <a href="http://www.mensfitness.com/life/sports/yoga-for-athletes">sports</a>.  The meaning of fitness is expanded in yoga to integrate mind and body through the action of breath and conscious movement. An improved fitness gained in yoga can then be applied productively in competitive sports.</p>
+			
+			<p class="lead">Yoga is restorative to the <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3193654/">mind and to the body.</a>  The therapeutic effects of yoga can be felt as renewed energy. Yoga also develops our energy through focused practice.</p>
+			
+			<p class="lead">Our success depends on our performance in all spheres of life. Performance benefits of yoga are <a href="http://www.ijpp.com/IJPP%20archives/2001_45_3/351-354.pdf">well documented.</a>  Increased energy and fitness only partly describe the performance benefits from yoga in all aspects of life, social, home, work and sports. </p>
 		</div>
-		<div class="col-md-4">
-			<h3 class="light">Energy</h3>
-			<p class="lead">Yoga is restorative to the mind and to the body (http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3193654/).  The therapeutic effects of yoga can be felt as renewed energy.  The practice acts as a slow and progressive cure from physical and emotional ailments that when unchecked drain us of our vitality.  Yoga also develops our energy through focused practice.</p>
-		</div>
-		<div class="col-md-4">
-			<h3 class="light">Performance</h3>
-			<p class="lead">Our success depends on our performance in all spheres of life.  Yoga develops a state of calm abiding that can be described as a confident state of being "in the zone"; aware yet calm, ready yet contained.  Performance benefits of yoga are well documented (http://www.ijpp.com/IJPP%20archives/2001_45_3/351-354.pdf).  Increased energy and fitness only partly describe the performance benefits from yoga in all aspects of life, social, home, work and sports.  
-</p>
-		</div>
+	
 	</div>
+	
 	<!--Hours-->
 </section>
 <section class="hours container">
-	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
-			<h3 class="light">Hours</h3>
-			<p class="lead">Moga Will be taking place weekly on sunday afternoons. Please be on time. or whatever, just drop by!</p>
-		</div>
-		<div class="col-md-4">
-			<h3 class='light'>Location</h3>
-			<p class='lead'>Tulaa Yoga Studio<br>3100 Naamans Rd Wilmington DE 19810<br>Phone: 302.478.YOGA (9642) <br>Email us: info@tulaayoga.com</p>
-		</div>
-	</div>
+	
 </section>
  <!-- jQuery -->
     <script src="js/jquery.js"></script>
