--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h3 class="light">Hours</h3>
-					<p class="lead">Moga Will be taking place weekly on sunday afternoons. Please be on time. or whatever, just drop by!</p>
+					<p class="lead">Moga Will be taking place weekly on sunday afternoons. Please be on time or just drop by!</p>
 				</div>
 				<div class="col-sm-6">
 					<h3 class='light'>Location</h3>
@@ -83,7 +83,7 @@
 		</div>
 		<div class="col-md-4"> 
 			<h1 class="light">About Moga</h1>
-			<p class="lead">Moga aims to capture those essential elements that made this art appealing to men in ancient India.  But, yoga has also continued to develop over the millennia.  which Moga encompasses through a blend of new approaches, techniques and methods.  everyone has an individual spark, a personality, that can flourish through yoga over time.  Tulaa and Moga have collaborated to create sessions that enhance strength, power, balance and flexibility through regular practice</p>
+			<p class="lead">Moga aims to capture those essential elements that made yoga appealing to men in ancient India. Yoga has continued to develop over the millennia, and Moga encompasses this through a blend of new approaches, techniques and methods. Everyone has an individual spark, a personality, that can flourish through yoga over time.  Tulaa and Moga have collaborated to create sessions that enhance strength, power, balance and flexibility through regular practice</p>
 			
 			<p class="lead">Yoga is now common in mainstream <a href="http://www.mensfitness.com/life/sports/yoga-for-athletes">sports</a>.  The meaning of fitness is expanded in yoga to integrate mind and body through the action of breath and conscious movement. An improved fitness gained in yoga can then be applied productively in competitive sports.</p>
 			
